manifest icon title fix for long strings
In Application pane, label `as used by browser` is getting
cut off by manifest icon.

Edge
Before: https://i.imgur.com/LBrvErT.png
After: https://i.imgur.com/DGR2O51.png

Chrome
Before: https://i.imgur.com/eWBGUNA.png
After: https://i.imgur.com/rUDn2Lx.png

Bug: 1131659

--- a/front_end/resources/appManifestView.css
+++ b/front_end/resources/appManifestView.css
@@ -3,3 +3,6 @@
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file.
  */
+.manifest-icon-field-title {
+  flex-basis: 152px;
+}
